--- a/public/labs.html
+++ b/public/labs.html
@@ -22,7 +22,7 @@
 <body ng-controller="mainController">
 <div class="container">
     <div class="page-header text-center">
-    <img src="../img/databear.jpg" height="200" width="300">
+    <img src="../img/Databear.jpg" height="200" width="300">
     </div>
     <div class="page-header text-center">
         <h1><span class="fa fa-hashtag"></span> Training Day Labs</h1>
