mongo config and logo

--- a/public/labs.html
+++ b/public/labs.html
@@ -145,7 +145,7 @@
     </div>
 
     <div class="text-center">
-        <p><a href="http://cs.co/trainingday">Cisco Norcal Territory - Training Day</a>.</p>
+        <p><a href="http://cs.co/trainingday">Cisco Silicon Valley Territory - Training Day</a>.</p>
 </div>
 </body>
 </html>
